--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build with mdBook
         run: |
           mkdir bin
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/0.5.2/mdbook-0.5.2-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
+          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.5.2/mdbook-v0.5.2-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
           bin/mdbook build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
